# melo-resources

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  inkscape.bzl
src/: BUILD.bazel
